Fix toast incorrect positioning when no scrollbar is present

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -39,7 +39,7 @@
 /* --------------------------------------------------------Checkout Success */
 
 #order-container {
-    font-size: 1.2em;
+    font-size: 1.1em;
     opacity: 0;
     position: relative;
     top: 128px;
